# voice_assistant_commands

./: .gitignore  .pre-commit-config.yaml  config.py  example.env  example.py  main.py  mypy.ini  pp.py  pyproject.toml  pytest.ini  readme.md  references.md  reminders.ics  review.md
dependencies/: __init__.py  auxiliary_functions.py  helpers.py
tests/: test_alarm.py  test_clock_city.py  test_current_date.py  test_current_time.py  test_data.py  test_datetime.py  test_for_time.py  test_location.py  test_media.py  test_nl_bool.py  test_nl_measurement.py  test_nl_number.py  test_note.py  test_reminder.py  test_request.py  test_requets.py  test_stopwatch.py  test_time.py  test_time_in_city.py  test_time_in_the_city.py  test_timer.py  test_volume.py
utilits/: __init__.py  combinatorics.py  cookie.py
voice_commands/: __init__.py  data_and_time.py
voice_commands/apps/clock/: __init__.py  commands.py
voice_commands/apps/mediaplayer/: __init__.py  commands.py
voice_commands/apps/reminders/: __init__.py  commands.py
voice_commands/apps/weather/: __init__.py  commands.py
voice_commands/apps/webbrowser/: __init__.py  commands.py
voice_commands/clock/: __init__.py  current_date.py  current_time.py  current_time_in_city.py  data_and_time.py  manager.py  stopwatch.py  time_in_another_city.py
voice_commands/clock/commands/: command_clock.py  command_date.py
voice_commands/clock/helpers/: helpers.py
voice_commands/clock/models/: model_time.py
voice_commands/clock/providers/: __init__.py  provider_clock.py  provider_date.py  provider_time.py  provider_time_in_city.py
voice_commands/formatters/: __init__.py  time.py
voice_commands/helpers/: __init__.py  confirmation_phrases.py  detect_lang.py  fractions_ru.py  help_with_numbers.py  helpers.py  num_en.py  num_ru.py
voice_commands/mediaplayer/: manager.py
voice_commands/mediaplayer/custom_types/: custom_sound.py
voice_commands/mediaplayer/providers/: provider_player.py
voice_commands/models/: model_city.py  model_time.py
voice_commands/modules/clock/: manager.py  stopwatch.py
voice_commands/modules/note/: __init__.py  manager.py
voice_commands/modules/user_media/: __init__.py  manager.py  media.py
voice_commands/modules/weather/: example.py  manager.py
voice_commands/modules/webbrowser/: manager.py  request.py
voice_commands/nl_types/: nl_bool.py  nl_number.py  nl_number_implementation.py  nl_number_interface.py  parsing_context.py
voice_commands/note/: __init__.py  notes.py
voice_commands/parameters/: __init__.py  data_dictionary.py  date.py  date_time.py  time.py  time_interval.py
voice_commands/providers/: __init__.py  location_provider.py
voice_commands/reminder/: __init__.py  manager.py
voice_commands/stopwatch/: manager.py
voice_commands/timer/: __init__.py  get_time.py  manager.py  stopwatch.py  timer.py
voice_commands/user_media/: __init__.py  manager.py  media.py  record_player.py
voice_commands/user_request/: __init__.py  browser_request.py  manager.py  request.py
voice_commands/weather/: __init__.py  example.py  manager.py
voice_commands/webbrowser/: manager.py
(+92 files in other folders)
